Home/Landing is flexed properly brand image on left Call To Action menu on right divs have been seperated properly in order to prevent shifting when swithcing links

--- a/src/components/cta_menu/cta.css
+++ b/src/components/cta_menu/cta.css
@@ -1,23 +1,33 @@
 .cta-wrapper {
-    border: 1px solid black;
-    
+    /* border: 1px solid blue; */
+
+    width: 500px;
+
     display: flex;
+    flex-direction: row;
     flex-wrap: wrap;
-    flex-direction: row;
+    justify-content: space-evenly;
 
 }
 
-
-
-.cta-routes {
-    /* border: 1px solid black;  */
-}
-
-.cta-links {
-    /* border: 1px solid black;  */
+.cta-link-wrapper {
+    /* border: 1px solid black; */
 
     display: flex;
     flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
 
-    margin-right: 50%;
+    width: inherit;
+
+    margin-top: 25px;
+}
+
+
+.cta-route-wrapper {
+    /* border: 1px solid red; */
+
+    width: inherit;
+
+    margin-bottom: 150px;
 }
